# Kirisakura_Raviole

./: .clang-format  .gitignore  BUILD.bazel  Kconfig  MAINTAINERS  Makefile  Makefile.ext_modules.cloudripper  Makefile.ext_modules.include  Makefile.ext_modules.slider  OWNERS  OWNERS_core  aoc-interface.h  aoc.c  aoc.h  aoc_channel_dev.c  aoc_char_dev.c  aoc_control_dev.c  aoc_dummy_drv.c  aoc_firmware.c  aoc_firmware.h  aoc_ramdump_regions.h  aoc_uwb_platform_drv.c  aoc_uwb_service_dev.c  aoc_uwb_service_dev.h  build.config.allmodconfig  build.config.common  build.config.constants  build.config.gki  build.config.gki.aarch64  build.config.gs101  build.config.slider  build_mixed.sh  build_slider.sh  download_hlos_boot_images_and_repack_kernel_boot_images.sh  ion_physical_heap.c  ion_physical_heap.h  mailbox-wc.c  update_symbol_list.sh  update_symbol_list_cloudripper-staging.sh  update_symbol_list_slider-staging.sh  (+5 more)
Documentation/RCU/: RTFP.txt  stallwarn.rst
Documentation/admin-guide/: cgroup-v2.rst  kernel-parameters.txt
Documentation/arm64/: silicon-errata.rst
Documentation/core-api/: index.rst
Documentation/filesystems/: fscrypt.rst  porting.rst
Documentation/networking/: ip-sysctl.rst
Documentation/timers/: no_hz.rst
Documentation/trace/: ftrace.rst
Documentation/vm/: multigen_lru.rst
alsa/: Makefile  aoc-interface.h  aoc_alsa.h  aoc_alsa_card.c  aoc_alsa_compr.c  aoc_alsa_ctl.c  aoc_alsa_drv.c  aoc_alsa_drv.h  aoc_alsa_hw.c  aoc_alsa_incall.c  aoc_alsa_path.c  aoc_alsa_path.h  aoc_alsa_pcm.c  aoc_alsa_voice.c  aoc_alsa_voip.c  google-aoc-enum.h
android/: abi_gki_aarch64_db845c  abi_gki_aarch64_exynos  abi_gki_aarch64_exynosauto  abi_gki_aarch64_fips140  abi_gki_aarch64_galaxy  abi_gki_aarch64_generic  abi_gki_aarch64_hikey960  abi_gki_aarch64_imx  abi_gki_aarch64_mtk  abi_gki_aarch64_oplus  abi_gki_aarch64_pixel  abi_gki_aarch64_qcom  abi_gki_aarch64_rockchip  abi_gki_aarch64_unisoc  abi_gki_aarch64_virtual_device  abi_gki_aarch64_vivo
arch/: Kconfig
arch/arm/: Kconfig
arch/arm64/: Kconfig  Makefile  Makefile.postlink
arch/riscv/: Kconfig  Makefile
arch/x86/: Kconfig
block/: Kconfig.iosched  Makefile  bfq-cgroup.c  bfq-iosched.c  bfq-iosched.h  bfq-wf2q.c  bio.c  blk-cgroup.c  blk-ioc.c  blk-merge.c  blk-mq-sched.c  blk-mq.c  blk-mq.h  blk.h  bsg.c  elevator.c  mq-deadline-main.c  mq-deadline.c  ssg-iosched.c
crypto/: Kconfig  Makefile  algapi.c  drbg.c
drivers/: Kconfig  Makefile  OWNERS
drivers/amba/: bus.c
drivers/android/: binder.c  binder_alloc.c  binder_alloc.h  binder_internal.h  binder_trace.h  vendor_hooks.c
drivers/ata/: libata-core.c
drivers/base/: cacheinfo.c  core.c  node.c
drivers/block/: loop.c
drivers/char/: Kconfig  mspec.c
drivers/clk/: Kconfig  clk.c
drivers/clocksource/: Kconfig  exynos_mct.c
drivers/cpufreq/: Kconfig.arm  Makefile  cpufreq.c  exynos-acme.c  exynos-acme.h
drivers/cpuidle/: cpuidle.c
drivers/dax/: device.c
drivers/devfreq/: Kconfig  Makefile  devfreq.c
drivers/dma/: Kconfig  Makefile  pl330.c
drivers/dma-buf/: dma-buf-sysfs-stats.c  dma-buf.c
drivers/gpio/: gpiolib.c
drivers/hid/: hid-core.c  hid-ids.h  hid-logitech-dj.c
drivers/iio/: Kconfig  Makefile
drivers/input/: Kconfig  Makefile
drivers/iommu/: Kconfig  Makefile  dma-iommu.c  io-pgtable-arm-v7s.c  io-pgtable-arm.c  iommu.c  samsung-iommu-fault.c  samsung-iommu.c  samsung-iommu.h  tegra-smmu.c
drivers/irqchip/: irq-gic-v3-its.c  irq-gic-v3.c
drivers/md/: dm-bufio.c  dm-cache-metadata.c  dm-flakey.c  dm-zoned-metadata.c  raid5.c  raid5.h
drivers/media/: Kconfig
drivers/mfd/: Kconfig  Makefile  s2mpg10-core.c  s2mpg11-core.c  s2mpg12-core.c  s2mpg13-core.c  slg51002-core.c
drivers/misc/: Kconfig  Makefile  gvotable.c  logbuffer.c  open-dice.c  vmw_balloon.c
drivers/net/: macsec.c
drivers/nfc/: Kconfig  Makefile
drivers/nvmem/: core.c
drivers/of/: Kconfig  of_reserved_mem.c
drivers/pci/: pci.c  pci.h
drivers/pinctrl/: Kconfig  Makefile
drivers/pwm/: pwm-rockchip.c  pwm-samsung.c
drivers/regulator/: Kconfig  Makefile  s2mpg11-regulator.c
drivers/remoteproc/: remoteproc_core.c
drivers/rtc/: Kconfig  Makefile
drivers/scsi/: hosts.c  scsi_error.c  scsi_lib.c  scsi_priv.h  scsi_scan.c  sg.c
drivers/soc/: Kconfig  Makefile
drivers/spi/: Kconfig  spi-s3c64xx.c
drivers/thermal/: Kconfig  Makefile  thermal_core.c  thermal_core.h  thermal_of.c
drivers/trusty/: trusty-ipc.c  trusty-log.c  trusty-virtio.c  trusty.c
drivers/tty/: moxa.c
drivers/uio/: uio.c
drivers/vhost/: vdpa.c
drivers/virtio/: virtio_balloon.c
drivers/watchdog/: Kconfig  s3c2410_wdt.c
drivers/xen/: gntalloc.c  gntdev.c  privcmd-buf.c  privcmd.c
fs/: Kconfig  aio.c  binfmt_elf.c  binfmt_elf_fdpic.c  binfmt_flat.c  block_dev.c  buffer.c  coredump.c  direct-io.c  eventpoll.c  exec.c  file.c  fs-writeback.c  mbcache.c  namei.c  open.c  splice.c  super.c  userfaultfd.c
fs/btrfs/: file.c  super.c
include/: OWNERS
init/: Kconfig.gki  init_task.c  main.c
ipc/: shm.c
kernel/: Kconfig.preempt  Makefile  acct.c  cfi.c  cpu.c  cred.c  exit.c  fork.c  futex.c  irq_work.c  kcov.c  kthread.c  module.c  relay.c  scftorture.c  signal.c  smp.c  softirq.c  sys.c  sysctl.c  task_work.c  user.c  workqueue.c
lib/: Kconfig  Kconfig.debug  Makefile  iov_iter.c  maple_tree.c  percpu-refcount.c  stackdepot.c  test_printf.c
mm/: Kconfig  Kconfig.debug  Makefile  backing-dev.c  cma.c  cma.h  compaction.c  debug.c  dmapool.c  filemap.c  gup.c  hmm.c  huge_memory.c  hugetlb.c  init-mm.c  internal.h  khugepaged.c  ksm.c  madvise.c  memblock.c  memcontrol.c  memory-failure.c  memory.c  memory_hotplug.c  mempolicy.c  memremap.c  migrate.c  mincore.c  mlock.c  mmap.c  mmu_gather.c  mmzone.c  mprotect.c  mremap.c  msync.c  nommu.c  oom_kill.c  page-writeback.c  page_alloc.c  page_ext.c  (+25 more)
net/: socket.c
scripts/: Makefile.build  Makefile.lib  Makefile.modfinal  Makefile.modpost  setlocalversion
uapi/: aoc.h
usb/: Makefile  aoc_usb.h  aoc_usb_dev.c  snd_usb_audio_hook_impl_whi.c  usb_hooks_impl_whi.c  xhci_hooks_impl_whi.c
(+852 files in other folders)
