# Copyright (C) 2021 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
package(
    default_visibility = [
        "//private/google-modules:__subpackages__",
    ],
)

load("//build/kleaf:kernel.bzl", "kernel_build")

kernel_build(
    name = "slider",
    srcs = glob(
        ["**"],
        exclude = [
            ".*",
            "BUILD.bazel",
            "**/*.bzl",
        ],
    ),
    outs = [
        "arch/arm64/boot/dts/google/gs101-a0.dtb",
        "arch/arm64/boot/dts/google/gs101-b0.dtb",
        "arch/arm64/boot/dts/google/dtbo.img",
        "arch/arm64/boot/dts/google/gs101-dpm-eng.dtbo",
        "arch/arm64/boot/dts/google/gs101-dpm-user.dtbo",
        "vmlinux",
        "System.map",
        "arch/arm64/boot/Image.lz4",

        # Not in FILES, but needed to build kernel modules.
        "Module.symvers",
        "include/config/kernel.release",
        "modules.order",
        "modules.builtin",
        "modules.builtin.modinfo",

        # TODO(b/197995714): Add other things built by build.sh
        # "abi_symbollist",
        # "boot.img",
        # "vendor_boot.img",
    ],
    build_config = "build.config.slider",
    # Keep in sync with build.config.common
    toolchain_version = "r416183b",
    deps = [
        "//prebuilts/misc/linux-x86/libufdt:mkdtimg",
    ],
)
